# contractiq

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py
app/models/: contract.py  user.py
app/routers/: analysis.py  bulk.py  contracts.py  serialization_demo.py  users.py
app/services/: auth.py  llm.py
tests/: test_contracts.py
